{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 5,
  "lineage": "dd085c4f-050f-b843-5b27-8e4ca4c95269",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a3b451037d30d946",
            "arn": "arn:aws:ec2:us-east-2:442042553195:elastic-ip/eipalloc-0a3b451037d30d946",
            "domain": "vpc",
            "id": "eipalloc-0a3b451037d30d946",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-21-203-167.us-east-2.compute.amazonaws.com",
            "public_ip": "3.21.203.167",
            "public_ipv4_pool": "amazon",
            "region": "us-east-2"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:442042553195:security-group/sg-0b8e3c8ec5534049d",
            "description": "Manage from terrform",
            "egress": [],
            "id": "sg-0b8e3c8ec5534049d",
            "ingress": [],
            "name": "terraform-firewall",
            "name_prefix": "",
            "owner_id": "442042553195",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0afc5b130a7ec8e80"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "442042553195",
            "id": "sg-0b8e3c8ec5534049d",
            "region": "us-east-2"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_tls_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:442042553195:security-group-rule/sgr-08736a7a1688cdc9f",
            "cidr_ipv4": "3.21.203.167/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-08736a7a1688cdc9f",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-2",
            "security_group_id": "sg-0b8e3c8ec5534049d",
            "security_group_rule_id": "sgr-08736a7a1688cdc9f",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "442042553195",
            "id": "sgr-08736a7a1688cdc9f",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_eip.lb",
            "aws_security_group.sg"
          ]
        }
      ]
    }
  ]
}